--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Tue May 10 12:15:59 MSK 2016
+org.gradle.daemon=true
+org.gradle.parallel=true
