--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects
     repositories
     {
         jcenter()
+        maven { url 'https://github.com/yandexmobile/yandexmapkit-android/raw/maven/' }
     }
 }
 
