--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:gridlayout-v7:23.4.0'
+    compile 'com.android.volley:volley:1.0.0'
     compile 'ru.yandex:yandexmapkit:2.4.2@aar'
 }
