--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,9 @@ dependencies
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:gridlayout-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'ru.yandex:yandexmapkit:2.4.2@aar'
