--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="ru.okmarket.okgoods">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -25,11 +26,13 @@
         <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".activities.MainActivity">
+            android:parentActivityName=".activities.MainActivity"
+            tools:ignore="UnusedAttribute">
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ru.okmarket.okgoods.activities.MainActivity" />
+
         </activity>
 
         <activity
@@ -39,9 +42,35 @@
 
         <activity
             android:name=".activities.PhotoViewerActivity"
-            android:immersive="true"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:immersive="true"
             android:theme="@style/FullscreenTheme" />
+
+        <activity
+            android:name=".activities.HistoryActivity"
+            android:label="@string/title_activity_history"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="UnusedAttribute">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ru.okmarket.okgoods.activities.MainActivity" />
+
+        </activity>
+
+        <activity
+            android:name=".activities.HistoryDetailsActivity"
+            android:label="@string/title_activity_history_details"
+            android:parentActivityName=".activities.HistoryActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="UnusedAttribute">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.HistoryActivity" />
+
+        </activity>
 
     </application>
 
