--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,13 @@
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <activity
@@ -71,6 +73,11 @@
                 android:value=".activities.HistoryActivity" />
 
         </activity>
+
+        <activity
+            android:name=".activities.GoodsCatalogActivity"
+            android:label="@string/title_activity_goods_activity"
+            android:theme="@style/AppTheme.NoActionBar" />
 
     </application>
 
