--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,16 +13,17 @@ android
         }
     }
 
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.1"
 
     defaultConfig
     {
         applicationId "ru.okmarket.okgoods"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 10
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes
@@ -39,17 +40,21 @@ android
 dependencies
 {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.android.support:gridlayout-v7:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:design:26.0.1'
+    compile 'com.android.support:gridlayout-v7:26.0.1'
+    compile 'com.android.support:recyclerview-v7:26.0.1'
+    compile 'com.android.support:support-v4:26.0.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.google.android.gms:play-services-analytics:9.8.0'
-    compile 'com.github.chrisbanes:PhotoView:1.2.6'
-    compile 'net.opacapp:multiline-collapsingtoolbar:1.0.0'
-    compile 'ru.yandex:yandexmapkit:2.4.2@aar'
+    compile 'com.google.android.gms:play-services-analytics:11.2.0'
+    compile 'com.github.chrisbanes:PhotoView:2.0.0'
+    compile 'net.opacapp:multiline-collapsingtoolbar:1.5.0'
+    compile 'ru.yandex:yandexmapkit:2.5.4@aar'
 }
 
 apply plugin: 'com.google.gms.google-services'
