--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript
 
     dependencies
     {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath "com.android.tools.build:gradle:2.3.3"
+        classpath "com.google.gms:google-services:3.1.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,7 +22,8 @@ allprojects
     repositories
     {
         jcenter()
-        maven { url 'https://github.com/yandexmobile/yandexmapkit-android/raw/maven/' }
+        maven { url "https://maven.google.com" }
+        maven { url "https://github.com/yandexmobile/yandexmapkit-android/raw/maven/" }
         maven { url "https://jitpack.io" }
     }
 }
